Added FAST Streamlit

--- a/02_nlp.ipynb
+++ b/02_nlp.ipynb
@@ -3451,10 +3451,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from lxml import etree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = requests.get('https://purl.stanford.edu/gr700fs0830.xml')\n",
+    "doc = etree.XML(result.text.encode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns = { \n",
+    "       \"mods\": \"http://www.loc.gov/mods/v3\" }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Element identityMetadata at 0x7fb48bf4b2c0>\n",
+      "<Element contentMetadata at 0x7fb48b8bbd80>\n",
+      "<Element rightsMetadata at 0x7fb48cbc5140>\n",
+      "<Element {http://www.w3.org/1999/02/22-rdf-syntax-ns#}RDF at 0x7fb48cbc5e40>\n",
+      "<Element {http://www.openarchives.org/OAI/2.0/oai_dc/}dc at 0x7fb48cbc5040>\n",
+      "<Element {http://www.loc.gov/mods/v3}mods at 0x7fb48cbc50c0>\n",
+      "<Element releaseData at 0x7fb48cbc5080>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for child in doc.getchildren():\n",
+    "    print(child)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Two dimensional electron systems (2DESs) at semiconductor interfaces are a useful medium for studying complex physics due to their very low disorder and relative simplicity. Many interesting effects, such as the quantum Hall effect, have been discovered through transport measurements in such systems. Unfortunately, the interfacial nature of 2DESs and the related surface energy barrier means that directly accessing them from the surface is difficult. This has limited our understanding of theoretically-predicted, spatially-organized effects such Wigner-crystal microemulsions and quantum Hall stripes, which have been probed only indirectly. In this dissertation, we develop a new type of local probe that circumvents the surface barrier by tunneling into a 2DES from a second 2DES grown nearby. The interlayer tunneling happens directly below a scanned metal tip outside the sample, behaving as a virtual tip in a system we call Virtual Scanning Tunneling Microscopy (VSTM). In the first half of the dissertation, we discuss a novel mechanism for tuning tunneling locally between two 2DESs. Its premise is that raising a quantum potential well next to an adjacent barrier is energetically similar to lowering the barrier relative to a fixed well. A lower barrier leads to the quantum well wave function extending into it and to increased tunneling into a second quantum well on the opposite side. We characterize this mechanism in a GaAs-AlGaAs heterostructure as a new type of transistor. In the second half of the dissertation, results from a working VSTM system are presented, with local interlayer tunneling revealing hidden features in the interfaces below the surface.'"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.find(\"mods:mods/mods:abstract\", namespaces=ns).text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "etd."
+   ]
   }
  ],
  "metadata": {
