Notebooks and code used in first AI-ETD work-cycle

--- a/05_data_prep.ipynb
+++ b/05_data_prep.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "import pathlib\n",
+    "\n",
     "from nltk import word_tokenize\n",
     "etds = pathlib.Path(\"../tmp/etds\")\n",
     "etd_paths = [etd for etd in etds.iterdir()]"
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +180,7 @@
        "10316"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,22 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "38798"
+       "['ANALYSIS', 'OF']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(kh271wr8164_tokens)"
+    "kh271wr8164_tokens[0:2]"
    ]
   },
   {
@@ -301,33 +303,311 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\n"
+    "import lxml.etree as etree\n",
+    "import requests\n",
+    "\n",
+    "ns = {\"mods\": \"http://www.loc.gov/mods/v3\"}\n",
+    "\n",
+    "def get_department(druid: str):\n",
+    "    purl_url = f\"https://purl.stanford.edu/{druid}.xml\"\n",
+    "    try:\n",
+    "        purl_result = requests.get(purl_url)\n",
+    "    except:\n",
+    "        print(f\"Request error for {druid} with {purl_url}\")\n",
+    "        return ''\n",
+    "    try:\n",
+    "        purl_xml = etree.XML(purl_result.text.encode())\n",
+    "    except etree.XMLSyntaxError:\n",
+    "        print(f\"\\nXML Syntax Error for {druid}\")\n",
+    "        return ''\n",
+    "    corporate_names = purl_xml.findall(\"mods:mods/mods:name[@type='corporate']/mods:namePart\", namespaces=ns)\n",
+    "    department = []\n",
+    "    for name in corporate_names:\n",
+    "        if name.text.startswith(\"Stanford University\"):\n",
+    "            continue\n",
+    "        department.append(name.text)\n",
+    "    return ','.join(department)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 405M/405M [04:30<00:00, 1.50MB/s] \n"
+      "2020-10-20 16:22:50.518016\n",
+      ".0..........250..........500..........750..........1000..........1250..........1500.......Request error for sf979mz6738 with https://purl.stanford.edu/sf979mz6738.xml\n",
+      "...1750...\n",
+      "XML Syntax Error for tt337yq1092\n",
+      ".......2000.......\n",
+      "XML Syntax Error for lm_c\n",
+      "...2250\n",
+      "XML Syntax Error for gs372pn4215\n",
+      "..........2500..........2750.........\n",
+      "XML Syntax Error for lm_train\n",
+      ".3000..........3250..........3500\n",
+      "XML Syntax Error for world-accessible-etd-full-\n",
+      ".\n",
+      "XML Syntax Error for abstr\n",
+      ".........3750..........4000..........4250..........4500..........4750....\n",
+      "XML Syntax Error for lm_val\n",
+      "......5000..........5250..........5500..........5750..........6000..........6250.Finished at 2020-10-20 17:44:09.836560 total time 81.31666666666666 minutes\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import datetime\n",
+    "druid_departments = {}\n",
+    "start = datetime.datetime.utcnow()\n",
+    "print(start)\n",
+    "for i,etd in enumerate(etd_paths):\n",
+    "    if etd.is_dir():\n",
+    "        continue\n",
+    "    druid = etd.name[:-4]\n",
+    "    departments = get_department(druid)\n",
+    "    druid_departments[druid] = departments\n",
+    "    if not i%25:\n",
+    "        print(\".\", end=\"\")\n",
+    "    if not i%250:\n",
+    "        print(f\"{i}\", end=\"\")\n",
+    "end = datetime.datetime.utcnow()\n",
+    "print(f\"Finished at {end} total time {(end-start).seconds / 60.} minutes\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6288"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(druid_departments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Department of Computer Science.\n",
+      "Graduate School of Education.\n",
+      "Department of Geological and Environmental Sciences.\n",
+      "Department of Bioengineering.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in list(druid_departments.keys())[0:4]:\n",
+    "    print(druid_departments[row])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "abstract_df = pd.read_pickle(\"./data/abstracts.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_department(druid: str) -> str:\n",
+    "    return druid_departments.get(druid)\n",
+    "\n",
+    "abstract_df['departments'] = abstract_df.druids.apply(add_department)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>druids</th>\n",
+       "      <th>abstracts</th>\n",
+       "      <th>abstracts_cleaned</th>\n",
+       "      <th>departments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>yq942qc7340</td>\n",
+       "      <td>Metaverses are virtual worlds where users crea...</td>\n",
+       "      <td>metaverses virtual worlds users create entire ...</td>\n",
+       "      <td>Department of Computer Science.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>yx753dx0216</td>\n",
+       "      <td>In this dissertation, I use two novel test sco...</td>\n",
+       "      <td>dissertation  use two novel test score data se...</td>\n",
+       "      <td>Graduate School of Education.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>yd874rr2274</td>\n",
+       "      <td>A 20-minute documentary film was created to ac...</td>\n",
+       "      <td>minute documentary film created accelerate ...</td>\n",
+       "      <td>Department of Geological and Environmental Sci...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sh260yn9550</td>\n",
+       "      <td>The usage of hydrogen as an alternative energy...</td>\n",
+       "      <td>usage hydrogen alternative energy carrier beco...</td>\n",
+       "      <td>Department of Bioengineering.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>nk877ng0918</td>\n",
+       "      <td>High-order methods in Computational Fluid Dyna...</td>\n",
+       "      <td>high order methods computational fluid dynamic...</td>\n",
+       "      <td>Department of Aeronautics and Astronautics.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        druids                                          abstracts  \\\n",
+       "0  yq942qc7340  Metaverses are virtual worlds where users crea...   \n",
+       "1  yx753dx0216  In this dissertation, I use two novel test sco...   \n",
+       "2  yd874rr2274  A 20-minute documentary film was created to ac...   \n",
+       "3  sh260yn9550  The usage of hydrogen as an alternative energy...   \n",
+       "4  nk877ng0918  High-order methods in Computational Fluid Dyna...   \n",
+       "\n",
+       "                                   abstracts_cleaned  \\\n",
+       "0  metaverses virtual worlds users create entire ...   \n",
+       "1  dissertation  use two novel test score data se...   \n",
+       "2     minute documentary film created accelerate ...   \n",
+       "3  usage hydrogen alternative energy carrier beco...   \n",
+       "4  high order methods computational fluid dynamic...   \n",
+       "\n",
+       "                                         departments  \n",
+       "0                    Department of Computer Science.  \n",
+       "1                      Graduate School of Education.  \n",
+       "2  Department of Geological and Environmental Sci...  \n",
+       "3                      Department of Bioengineering.  \n",
+       "4        Department of Aeronautics and Astronautics.  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abstract_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abstract_df.to_pickle(\"./data/abstracts.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "etd_encoded = le.fit_transform(kh271wr8164_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 697, 2880, 1714, 3752, 1606])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "etd_encoded[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38798"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(etd_encoded)"
+   ]
   }
  ],
  "metadata": {
